k8s/apps/rabbitmq-cluster-operator/ciliumnetworkpolicy-egress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: rabbitmq-cluster-operator-network-policy
  namespace: rabbitmq-operator
spec:
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "6443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:app.kubernetes.io/component: rabbitmq
            k8s:app.kubernetes.io/name: default
            k8s:io.kubernetes.pod.namespace: rabbitmq
      toPorts:
        - ports:
            - port: "15672"
              protocol: TCP
  endpointSelector:
    matchLabels:
      k8s:app.kubernetes.io/component: rabbitmq-operator
      k8s:app.kubernetes.io/name: rabbitmq-cluster-operator
  ingress:
    - toPorts:
        - ports:
            - port: "9443"
              protocol: TCP
